--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-<title>Page title</title>
+<title>MAKIMA</title>
 </head>
 
 <body style="background-color:burlywood;text-align: center;">
